2-Ingress/blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-httpd
spec:
  selector:
    app: blue-httpd
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
