2-Ingress/green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-nginx
spec:
  selector:
    app: green-nginx
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
